- Customise preset names for Tombs of Amascut

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=ToA Custom Presets
+author=Denchy
 support=
-description=An example greeter plugin
+description=Allows you to change the name of ToA presets!
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.ToACustomPresets.ToACustomPresetsPlugin
