--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,14 @@ plugins {
 }
 
 repositories {
-    mavenLocal()
+    //mavenLocal()
     maven {
         url = 'https://repo.runelite.net'
     }
     mavenCentral()
 }
 
-def runeLiteVersion = '1.12.10'
+def runeLiteVersion = 'latest.release'
 
 dependencies {
     compileOnly group: 'net.runelite', name: 'client', version: runeLiteVersion
@@ -25,7 +25,7 @@ dependencies {
 
 group = 'com.ToACustomPresets'
 version = '1.0.'
-sourceCompatibility = '1.12.10'
+sourceCompatibility = '11.0.29'
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
